--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
     "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #f9f9fa;
 }
 
 code {
