--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
   margin: 0;
 }
 
+img {
+  display: block;
+}
+
 body {
   margin: 0;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI",
