--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #f9f9fa;
+
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
 }
 
 code {
@@ -38,4 +41,13 @@ h1 {
 .page {
   padding-top: 36px;
   padding-bottom: 70px;
+}
+
+.auth_text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  color: #000000;
+  opacity: 0.7;
+  margin-top: 31px;
 }
