--- a/src/features/packs/components/PacksTable/style.module.css
+++ b/src/features/packs/components/PacksTable/style.module.css
@@ -1,19 +1,30 @@
-.packsTable {
+.table {
   margin-top: 24px;
   text-align: left;
   background: white;
   border: 1px solid #d9d9d9;
+  border-spacing: 0;
   filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.1))
     drop-shadow(-1px -1px 2px rgba(0, 0, 0, 0.1));
 }
 
-.hrow {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
+.table thead {
   height: 48px;
   background: #efefef;
+  border: none;
+
+  cursor: pointer;
+}
+
+.table tr {
+  height: 47px;
+
+  border-bottom: 1px solid #d9d9d9;
+  border-bottom: 1px solid black;
+}
+
+.table th {
+  padding-left: 10px;
 
   font-style: normal;
   font-weight: 500;
@@ -22,56 +33,34 @@
   color: #000000;
 }
 
-.row {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.table th:first-child {
+  padding-left: 36px;
+}
 
-  height: 47px;
+.table td {
+  padding: 0 10px;
 
   font-style: normal;
   font-weight: 400;
   font-size: 13px;
   line-height: 16px;
 
+  max-width: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
   border-bottom: 1px solid #d9d9d9;
 }
 
-.row:last-child {
-  border-bottom: none;
-}
-
-.nameCol {
+.table td:first-child {
   padding-left: 36px;
-  width: 350px;
-  overflow: hidden;
 }
 
-.cardsCol {
-  padding-left: 10px;
-  width: 100px;
-  overflow: hidden;
+.table td:last-child {
+  padding-right: 0;
 }
 
-.updatedCol {
-  padding-left: 10px;
-  width: 150px;
-  overflow: hidden;
-}
-
-.createdCol {
-  padding-left: 10px;
-  width: 250px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.actionsCol {
-  padding-left: 10px;
-  width: 108px;
-  overflow: hidden;
-}
-.actionsCol img {
+.table td:last-child img {
   margin-right: 15px;
   cursor: pointer;
 }
