--- a/src/features/packs/components/PacksTable/style.module.css
+++ b/src/features/packs/components/PacksTable/style.module.css
@@ -37,6 +37,22 @@
   padding-left: 36px;
 }
 
+.table th:nth-child(1) {
+  width: 360px;
+}
+.table th:nth-child(2) {
+  width: 110px;
+}
+.table th:nth-child(3) {
+  width: 160px;
+}
+.table th:nth-child(4) {
+  width: 260px;
+}
+.table th:nth-child(5) {
+  width: 108px;
+}
+
 .table td {
   padding: 0 10px;
 
