--- a/src/features/packs/components/PacksTable/style.module.css
+++ b/src/features/packs/components/PacksTable/style.module.css
@@ -78,5 +78,12 @@
 
 .table td:last-child img {
   margin-right: 15px;
+}
+
+.table td:last-child img:nth-child(2) {
+  cursor: pointer;
+}
+
+.table td:last-child img:nth-child(3) {
   cursor: pointer;
 }
