--- a/src/common/components/Header/style.module.css
+++ b/src/common/components/Header/style.module.css
@@ -18,11 +18,6 @@
   display: block;
 }
 
-.block {
-  display: flex;
-  align-items: center;
-}
-
 .name {
   border-bottom: 1px dashed #000000;
   line-height: 24px;
@@ -39,6 +34,8 @@
   line-height: 24px;
   color: #000000;
   width: 100%;
+
+  cursor: pointer;
 }
 
 .progress {
