--- a/src/features/cards/components/CardsTable/style.module.css
+++ b/src/features/cards/components/CardsTable/style.module.css
@@ -35,16 +35,16 @@
 
 .table th:nth-child(1) {
   padding-left: 36px;
-  width: 360px;
+  width: 335px;
 }
 .table th:nth-child(2) {
-  width: 360px;
+  width: 335px;
 }
 .table th:nth-child(3) {
   width: 160px;
 }
 .table th:nth-child(4) {
-  width: 120px;
+  width: 170px;
 }
 
 .table td {
@@ -68,4 +68,27 @@
 
 .table td:last-child {
   padding-right: 0;
+}
+
+.table td:nth-child(4) img {
+  margin-left: 15px;
+  cursor: pointer;
+}
+
+.rating {
+  position: relative;
+  display: inline-block;
+  width: 84px;
+  height: 16px;
+  font-size: 20px;
+  color: #dadada;
+}
+
+.rating p {
+  top: 0;
+  left: 0;
+  position: absolute;
+  overflow: hidden;
+  font-size: 20px;
+  color: #ffc700;
 }
