--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,23 @@ h1 {
   opacity: 0.7;
   margin-top: 31px;
 }
+
+.card {
+  margin: 0 auto;
+
+  text-align: center;
+  padding: 42px 33px;
+  width: 400px;
+
+  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
+    0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+  background-color: #fff;
+  border-radius: 4px;
+}
+
+.card a {
+  color: #366eff;
+  display: block;
+  margin-top: 11px;
+  font-size: 20px;
+}
