--- a/src/features/cards/ui/CardsList/style.module.css
+++ b/src/features/cards/ui/CardsList/style.module.css
@@ -4,11 +4,26 @@
   justify-content: space-between;
 }
 
+.titlebox {
+  display: flex;
+  align-items: center;
+}
+
+.titlebox img {
+  width: 22px;
+  height: 22px;
+  display: block;
+  cursor: pointer;
+}
+
 .title {
   font-weight: 600;
   font-size: 22px;
   line-height: 27px;
   color: #000000;
+  max-width: 400px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .filters {
