--- a/src/features/packs/components/AddPackModal/style.module.css
+++ b/src/features/packs/components/AddPackModal/style.module.css
@@ -1,14 +1,13 @@
-.form button {
+.buttons {
+  display: flex;
+  justify-content: space-around;
+}
+
+.buttons button {
   margin: 35px 0;
   height: 36px;
-  padding: 0 45px;
-  background: #366eff;
-  box-shadow: 0px 4px 18px rgba(54, 110, 255, 0.35),
-    inset 0px 1px 0px rgba(255, 255, 255, 0.3);
-  border-radius: 30px;
-  border: none;
-  outline: none;
-  color: #fff;
+  min-width: 120px;
+  padding: 0 25px;
 
   font-family: "Montserrat";
   font-style: normal;
@@ -16,8 +15,27 @@
   font-size: 16px;
   line-height: 20px;
 
+  border-radius: 30px;
+  border: none;
+  outline: none;
+
   text-align: center;
   cursor: pointer;
+  user-select: none;
+}
+
+.save {
+  color: #fff;
+  background: #366eff;
+  box-shadow: 0px 4px 18px rgba(54, 110, 255, 0.35),
+    inset 0px 1px 0px rgba(255, 255, 255, 0.3);
+}
+
+.cancel {
+  color: #000;
+  background: #fcfcfc;
+  box-shadow: 0px 2px 10px rgba(109, 109, 109, 0.25),
+    inset 0px 1px 0px rgba(255, 255, 255, 0.3);
 }
 
 .checkbox {
