learn page alpha

--- a/src/features/cards/components/CardsTable/style.module.css
+++ b/src/features/cards/components/CardsTable/style.module.css
@@ -58,6 +58,7 @@
   max-width: 0;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 
   border-bottom: 1px solid #d9d9d9;
 }
