--- a/src/features/cards/ui/Learn/style.module.css
+++ b/src/features/cards/ui/Learn/style.module.css
@@ -23,15 +23,18 @@
   line-height: 24px;
 }
 
+.qna {
+  word-wrap: break-word;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .repititions {
   margin: 13px 0 35px 0;
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
   opacity: 0.5;
-}
-
-.card .radio {
 }
 
 .radio div {
