--- a/src/features/cards/ui/Learn/style.module.css
+++ b/src/features/cards/ui/Learn/style.module.css
@@ -22,7 +22,6 @@
 }
 .card {
   text-align: left;
-
   font-size: 16px;
   line-height: 24px;
 }
@@ -31,6 +30,13 @@
   word-wrap: break-word;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.qna img {
+  display: inline-block;
+  max-width: 240px;
+  vertical-align: middle;
+  margin: 0 auto;
 }
 
 .repititions {
