--- a/src/features/cards/components/CardsTable/style.module.css
+++ b/src/features/cards/components/CardsTable/style.module.css
@@ -63,6 +63,12 @@
   border-bottom: 1px solid #d9d9d9;
 }
 
+.table td img {
+  display: inline-block;
+  max-height: 38px;
+  vertical-align: middle;
+}
+
 .table td:first-child {
   padding-left: 36px;
 }
