--- a/src/features/packs/ui/PacksList/style.module.css
+++ b/src/features/packs/ui/PacksList/style.module.css
@@ -15,3 +15,10 @@
   display: flex;
   justify-content: space-between;
 }
+
+.pagination {
+  margin-top: 20px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
