--- a/src/features/packs/ui/PacksList/style.module.css
+++ b/src/features/packs/ui/PacksList/style.module.css
@@ -19,6 +19,6 @@
 .pagination {
   margin-top: 20px;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
