--- a/src/features/cards/ui/CardsList/style.module.css
+++ b/src/features/cards/ui/CardsList/style.module.css
@@ -7,6 +7,6 @@
 .pagination {
   margin-top: 20px;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
