--- a/src/features/packs/components/SearchPacks/style.module.css
+++ b/src/features/packs/components/SearchPacks/style.module.css
@@ -1,3 +1,8 @@
+.box {
+  width: 100%;
+  max-width: 413px;
+}
+
 .title {
   font-weight: 500;
   font-size: 14px;
@@ -9,7 +14,7 @@
 
 .search {
   margin-top: 8px;
-  width: 413px;
+  width: 100%;
   height: 36px;
 
   display: flex;
